--- a/Angular/ProyectoMedic/src/app/Componentes/home-paciente/menu-consultas-pendientes/modal-paciente-examenes-consultas/modal-paciente-examenes-consultas.component.html
+++ b/Angular/ProyectoMedic/src/app/Componentes/home-paciente/menu-consultas-pendientes/modal-paciente-examenes-consultas/modal-paciente-examenes-consultas.component.html
@@ -3,7 +3,7 @@
         <div class="modalC-content">
             <div class="modalc-header">
                 <h4 class="modalc-title">
-                    Solicitud de examen:
+                    Examenes Solicitados por el medico:
                 </h4>
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" (click)="show = false;">
                         <line x1="18" y1="6" x2="6" y2="18" />
